<resources>
    <!--Layout-->
    <string name="app_name">Alcohol or Gasoline</string>
    <string name="txt_info">Know the best option to fill your car</string>
    <!--Descriptions-->
    <string name="image_logo">image logo</string>
    <!--Inputs and Buttons-->
    <!--text boxes-->
    <string name="txtBox_alcohol_price">What\'s the price of Alcohol</string>
    <string name="txtBox_gasoline_price">What\'s the price of Gasoline</string>
    <!--Buttons-->
    <string name="btn_calculate">Calculate</string>
    <!--Responses-->
    <string name="txt_invalid_data">Please, enter all values correctly</string>
    <string name="txt_response_gasoline">Gasoline is better</string>
    <string name="txt_response_alcohol">Alcohol is better</string>
    <string name="txt_response_anyway">Anyway</string>

</resources>
